--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                     onclick="location.href='https://www.linkedin.com/in/jayakrishnan-k-a9b2b526b/'" />
                 <img src="assets/github.png" alt="My Github profile" class="icon"
                     onclick="location.href='https://github.com/Jayakrishnank2001'" />
+                <img src="assets/leetcode.png" alt="My leetcode profile" class="icon"
+                    onclick="location.href='https://leetcode.com/u/Jayakrishnan_k/'" />
                 <img src="assets/instagram.png" alt="My instagram profile" class="icon"
                     onclick="location.href='https://www.instagram.com/_jayakrishnan.__/'" />
             </div>
@@ -250,47 +252,47 @@
                     </div>
                 </div>
                 <div class="details-container">
-                    <h2 class="experience-sub-title">DevOps and Deployment</h2>
+                    <h2 class="experience-sub-title">Tools and Libraries</h2>
                     <div class="article-container">
                         <article>
                             <img src="/assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Docker</h3>
+                                <h3>Git & GitHub</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <img src="assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>CI/CD</h3>
+                                <h3>Postman</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <img src="assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>AWS EC2</h3>
+                                <h3>Figma</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <img src="assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>AWS S3</h3>
+                                <h3>Socket.IO</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
                             <img src="assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Nginx</h3>
+                                <h3>Stripe</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <img src="assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>Route53</h3>
+                                <h3>Firebase</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
@@ -298,7 +300,7 @@
                 </div>
             </div>
         </div>
-        <!-- <img src="assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" /> -->
+        <img src="assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
     </section>
     <section id="projects">
         <p class="section__text__p1">Browse My Recent</p>
@@ -307,7 +309,7 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="assets/project-12.jpg" alt="Project 1" class="project-img" />
+                        <img src="assets/project-12 (2).jpg" alt="Project 1" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Careervilla</h2>
                     <p>Job Portal Website</p>
@@ -319,13 +321,13 @@
                         </button>
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://careervilla-frontend.vercel.app'">
-                            Live Demo
+                            Live Link
                         </button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="assets/project-21.gif" alt="Project 2" class="project-img" />
+                        <img src="assets/project-21.jpg" alt="Project 2" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Shoes Store</h2>
                     <p>E-commerce Website</p>
@@ -337,13 +339,13 @@
                         </button>
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://shoestore-kkyz.onrender.com/'">
-                            Live Demo
+                            Live Link
                         </button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="assets/project-31.jpg" alt="Project 3" class="project-img" />
+                        <img src="assets/project-3.webp" alt="Project 3" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Netflix-Clone</h2>
                     <p>Web design</p>
@@ -355,7 +357,7 @@
                         </button>
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://netflix-clone-jayakrishnan-ks-projects.vercel.app/'">
-                            Live Demo
+                            Live Link
                         </button>
                     </div>
                 </div>
@@ -368,16 +370,16 @@
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
+                <img src="assets/phone.jpg" alt="Phone icon" class="icon contact-icon" />
+                <p><a>+91 7034240636</a></p>
+            </div>
+            <div class="contact-info-container">
                 <img src="assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
                 <p><a href="mailto:jkrishnan2001@gmail.com">jkrishnan2001@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
                 <p><a href="https://www.linkedin.com/in/jayakrishnan-k-a9b2b526b/">LinkedIn</a></p>
-            </div>
-            <div class="contact-info-container">
-                <img src="assets/phone.jpg" alt="Phone icon" class="icon contact-icon" />
-                <p><a>+91 7034240636</a></p>
             </div>
         </div>
     </section>
