--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Jayakrishnan K Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="icon" href="assets/logo.png" type="image/png" />
 </head>
 
 <body>
@@ -45,7 +46,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Jayakrishnan K</h1>
-            <p class="section__text__p2">Mean Stack Developer</p>
+            <p class="section__text__p2">Full Stack Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('assets/JAYAKRISHNAN K (RESUME).pdf')">
                     Download CV
@@ -78,7 +79,7 @@
                     <div class="details-container">
                         <img src="assets/experience.png" alt="Experience icon" class="icon" />
                         <h3>Experience</h3>
-                        <p>1+ year<br />Mean Stack Developer</p>
+                        <p>1+ year<br />Full Stack Developer</p>
                     </div>
                     <div class="details-container">
                         <img src="assets/education.png" alt="Education icon" class="icon" />
