--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
         <p>Copyright &#169; 2024 Jayakrishnan K. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
+    <script src="animation.js"></script>
 </body>
 
 </html>
