--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="assets/Untitled Project (10).jpg" alt="John Doe profile picture" class="profile-pic" />
+            <img src="assets/Untitled Project (10)-min.jpg" alt="John Doe profile picture" class="profile-pic" />
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
